--- a/W_UP_01.rmd
+++ b/W_UP_01.rmd
@@ -65,6 +65,13 @@ The median for both positions is way different. It appears the median for the sk
 
 <!--State hypothesis clearly. Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc. Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
+```{r}
+t.test(pushups~position,data=mydata)
+```
+the p-value is so small that we would reject the null hypothesis. 
+
+
+
 
 # Discussion and Conclusion
 
