--- a/W_UP_01.rmd
+++ b/W_UP_01.rmd
@@ -77,3 +77,4 @@ the p-value is so small that we would reject the null hypothesis.
 
 <!--Discussion and conclusion here. If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason. Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
 
+Based on the data we were given we can conclude that those in the skill position are able to execute a larger amount of push ups than those in the line position. This means that we can reject the null hypothesis which states that there is no difference between the amount of push ups that can be done between the two variables. 
